# inteniquetic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  plan.md  svelte.config.js  tailwind.config.ts  tsconfig.app.json
.github/: README.md
.github/workflows/: web.yml
deployments/: Dockerfile  Makefile  deployment.yaml  nginx.conf  service.yaml  web-prod.yml
src/: App.svelte  App.vue  app.css  app.html  main.rs  style.css
src/app/: mod.rs
src/components/: mod.rs
src/components/launchpad/: CategorySection.vue  FilterBar.vue  HighlightSection.vue  ProductSection.vue  ProjectCard.vue  category_section.rs  filter_bar.rs  highlight_section.rs  mod.rs  product_section.rs  project_card.rs
src/components/ui/: Badge.vue  Button.vue  SearchInput.vue  Section.vue  Shell.vue  badge.rs  button.rs  input.rs  mod.rs  section.rs  shell.rs
src/composables/: useLaunchpadState.ts
src/data/: categories.ts
src/lib/: DevLaunchpad.svelte  launchpad-utils.ts
src/pages/: LaunchpadPage.vue  launchpad.rs
src/routes/: +page.svelte
src/services/: launchpad_service.rs  mod.rs
src/state/: launchpad_state.rs  mod.rs
src/types/: launchpad.rs  launchpad.ts
src/utils/: launchpad_utils.rs  mod.rs
static/: app-ads.txt
